# ac-cdd

./: .ac_cdd_session.json  .gitignore  AUDITOR_DEBUG_CHECKLIST.md  BRANCH_FLOW_ANALYSIS.md  BRANCH_FLOW_ISSUES.md  DEV_FLOW.md  Dockerfile  FLOW_VERIFICATION.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  Makefile  README.md  README_DEVELOPER.md  STATE_REFACTORING_PLAN.md  TEST_INSTRUCTIONS.md  ac_cdd.toml  ac_cdd_config.py  branch_strategy.md  dev_flow.md  docker-compose.yml  dosa_test.py  entrypoint.sh  project_state.json  pyproject.toml  refactor_nodes.py  setup_template.sh  update_graph_nodes.py  update_graph_nodes_2.py  update_tests.py
.ac_cdd/: .env.example  project_state.json
dev_documents/: ALL_SPEC.md  DEV_FLOW.md  USER_TEST_SCENARIO.md
dev_documents/CYCLE99/: SPEC.md  UAT.md  session_report.json
dev_documents/system_prompts/: ARCHITECT_INSTRUCTION.md  AUDITOR_INSTRUCTION.md  CODER_INSTRUCTION.md  SYSTEM_ARCHITECTURE.md
dev_documents/templates/: ARCHITECT_INSTRUCTION.md  AUDITOR_INSTRUCTION.md
dev_src/ac_cdd_core/: agents.py  cli.py  config.py  domain_models.py  enums.py  graph.py  graph_nodes.py  interfaces.py  jules_session_graph.py  jules_session_nodes.py  jules_session_state.py  messages.py  process_runner.py  sandbox.py  session_manager.py  state.py  state_manager.py  utils.py  validators.py
dev_src/tests/: test_jules_client_logic.py
scripts/: refactor_cli.py  refactor_jules.py  refactor_jules_client.py  refactor_project.py
src/ac_cdd/: agents.py  cli.py  config.py  domain_models.py  graph.py  hash_utils.py  state.py  (+2 more)
tests/: test_temp_init.py
(+86 files in other folders)
