[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-dev-env"
version = "0.1.0"
description = "AI-Native Cycle-Based Contract-Driven Development Environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic~=2.11.0",
    "python-dotenv",
    "pydantic-settings",
    "pydantic-ai>=0.0.18",
    "langgraph>=1.0.5",
    "e2b-code-interpreter>=2.4.1",
    "httpx>=0.28.1",
    "google-auth>=2.43.0",
    "litellm>=1.80.11",
    "typer",
    "rich",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[project.scripts]
ac-cdd = "ac_cdd_core.cli:app"

[dependency-groups]
dev = [
    "shellingham",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "playwright",
    "vcrpy",
    "ruff",
    "google-genai",
    "mypy",
    "bandit",
    "types-PyYAML",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
# E/F/I: Basic, B: Bugbear, S: Bandit, UP: pyupgrade
select = ["E", "F", "I", "B", "S", "UP"]
# S101: Allow use of assert (for tests)
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
addopts = "--cov=dev_src --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["dev_src/ac_cdd_core", "src/mlip_autopipec"]

[tool.mypy]
strict = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
targets = ["dev_src"]
